# webshop

./: README.md
agentify-webshop/: .gitignore  pyproject.toml  requirements.txt
agentify-webshop/src/: launcher.py
agentify-webshop/src/green_agent/: __init__.py  agent.py  webshop_green_agent.toml
agentify-webshop/src/my_util/: __init__.py
agentify-webshop/src/white_agent/: __init__.py  agent.py
tutorial/: LICENSE  README.md
webshop-benchmark/: README.md  README_INSTALL_ARM-MAC.md
